# flytest

./: Dockerfile  fly.toml  manage.py  notes.md  pyproject.toml
flytest/: asgi.py  settings.py  urls.py  wsgi.py
simple/: urls.py
simple/migrations/: 0001_initial.py
simple/templates/: index.html
