[tool.poetry]
name = "flytest"
version = "0.1.0"
description = ""
authors = ["Matt Cooper <vtbassmatt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
dj-database-url = "^1.0.0"
daphne = "^4.0.0"
psycopg2-binary = "^2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
